--- a/public/index.html
+++ b/public/index.html
@@ -40,4 +40,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
+     <script src="https://cdn.tailwindcss.com"></script>
+
+
 </html>
